--- a/upLayerExaminer/tasks/s3-compability-check.yml
+++ b/upLayerExaminer/tasks/s3-compability-check.yml
@@ -92,9 +92,18 @@
       example: class
       another: unit
   
-  # aws3api put object body=1
-  # aws3api put object body=2 , register the tag
-  #
+  - name: put object version1
+      command: >  
+        aws --endpoint=http://rgw:80 s3api put-object
+        --bucket mys3bucket --key object-test-version --body /tmp/test-1
+      register: etag1-dict
+
+  - name: put object version2
+      command: >
+        aws --endpoint=http://rgw:80 s3api put-object --bucket mys3bucket --key object-test-version --body /tmp/test-2
+      register: etag2-dict
+
+
   - name: 
      aws_s3:
        bucket: test_s3bucket
